Small Tweaks to blog hyperlinks

--- a/index.html
+++ b/index.html
@@ -170,8 +170,17 @@
             >
 
             <br />
+            <br>
             <p class="title2">Performance</p>
             <br />
+            <div class="performing_images">
+              <img
+                      class="p_image"
+                      src="Images/(1) Anchorage - The Mooring - August 2022.jpeg"
+              />
+            </div>
+            <br>
+
             Tommy is not only an academic but also a seasoned performer with a
             passion for captivating audiences through the art of public
             speaking, stand-up comedy, and spoken-word poetry. Within the realm
@@ -182,15 +191,12 @@
             innovative approach adds a dynamic and educational twist to their
             comedy, delighting audiences with both humour and insightful
             visuals.
-
+            <br> <br>
             <div class="performing_images">
-              <img
-                class="p_image"
-                src="Images/(1) Anchorage - The Mooring - August 2022.jpeg"
-              />
+
               <img class="p_image" src="Images/(2) Stand-Up on the Stour.png" />
             </div>
-
+            <br>
             Tommy's unique comedic style and commitment to entertaining while
             educating set them apart as a multifaceted performer and academic,
             making them a standout in both worlds.
