--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <div class="mySlides">
               <div class="numbertext">1 / 16</div>
               <img
-                src="https://www.playbook.com/s/thetommyverse/SNTJJr6nzg5i7FJc4GpxYw72?assetToken=X5Gam4FxBHatSZgsToSiK1uN" 
+                src="Slideshow Images/Events Gallery Images/BarCamp - The CompSci Experiment.png" 
                 style="width: 100%"
               />
             </div>
