Fixed 'Ridiculous Quirks' on 'Events' page

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="events_Block" id="ridiculousquirks">
               <div class="events_Item" style="background-color: #861b00">
                 <img
-                  src="Events Images/Ridiculous Quirks Carousel Video.gif"
+                  src="/Events Images/Ridiculous Quirks Carousel Video.gif"
                   alt="Me"
                 />
               </div>
