Removed dark mode slider

--- a/index.html
+++ b/index.html
@@ -28,15 +28,6 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <!-- <button class="dark_mode_button" onClick="toggleDarkMode()"></button>-->
-    <!-- Rounded switch -->
-    <label class="switch">
-      <input type="checkbox" onClick="toggleDarkMode();" />
-      <span class="slider round">
-        <i class="slider_icon fa-solid fa-moon"></i>
-        <i class="slider_icon_2 fa-solid fa-sun"></i
-      ></span>
-    </label>
 
     <div class="tabWrapper">
       <div class="tab">
@@ -116,7 +107,8 @@
     <div id="About" class="tabcontent">
       <div class="pages_titles_container">
         <p class="title1">About</p>
-        <img src="Images/iccc.jpeg" class="r_image" />
+        <img src="Images/iccc.jpeg" class="r_image" /> <br>
+        <em>iCCC '23 Conference in Waterloo Canada</em>
 
         <div class="page_text_container">
           <div class="page_text_div">
