--- a/index.html
+++ b/index.html
@@ -29,6 +29,28 @@
   </head>
   <body>
 
+  <button onclick="location.href='https://thetommyverse.notion.site/get-in-touch?pvs=74';"
+          style="
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        background-color: var(--lightyellow, #fdf6b2);
+        color: black;
+        padding: 10px 15px;
+        font-size: 1em;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        z-index: 1000;
+        box-sizing: border-box;
+        transition: transform 0.2s ease, background-color 0.2s ease;
+    "
+          onmouseover="this.style.backgroundColor='var(--yellowalt, #fce96a)'; this.style.transform='scale(1.05)';"
+          onmouseout="this.style.backgroundColor='var(--lightyellow, #fdf6b2)'; this.style.transform='scale(1)';"
+  >
+    Get in touch!
+  </button>
+
     <div class="tabWrapper">
       <div class="tab">
         <button
