Fixed 'Get in Touch' button to website

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           onmouseover="this.style.backgroundColor='var(--yellowalt, #fce96a)'; this.style.transform='scale(1.05)';"
           onmouseout="this.style.backgroundColor='var(--lightyellow, #fdf6b2)'; this.style.transform='scale(1)';"
   >
-    Get in touch!
+    <i class="fa-solid fa-paper-plane"></i><span class="button_labels"> Get in touch!
   </button>
 
     <div class="tabWrapper">
