Began implementation of website v.2

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           onmouseover="this.style.backgroundColor='var(--yellowalt, #fce96a)'; this.style.transform='scale(1.05)';"
           onmouseout="this.style.backgroundColor='var(--lightyellow, #fdf6b2)'; this.style.transform='scale(1)';"
   >
-    <i class="fa-solid fa-paper-plane"></i><span class="tab_labels"> Get in touch!
+    <i class="fa-solid fa-envelope"></i><span class="tab_labels"> Get in touch!
   </button>
 
     <div class="tabWrapper">
@@ -655,7 +655,7 @@
             class="footer_links"
             onclick="location.href='mailto:tommy.hills@thetommyverse.com';"
           >
-            <i class="fa-solid fa-envelope"></i>
+            <i class="fa-solid fa-paper-plane"></i>
             <span class="tab_labels">Email</span>
           </button>
           <button
