Changes to Gallery and Event Pages

--- a/index.html
+++ b/index.html
@@ -311,6 +311,23 @@
 <div id="events" class="content fade">
   <h1>Events</h1>
   <div class="main-text-container">
+
+    <h2>Comedy</h2>
+
+    <p class="text-left">
+    I'm taking my human + AI comedy show on a tour of a few venues and Fringe festivals. Keep you eyes peeled for more locations and dates.
+    </p>
+    <div class="events-grid">
+    <div class="event-card">
+      <img class="event-image" src="/Events%20Images/Landscape%20-%20Comedy%20Singularity.png" alt="Comedy Singularity" />
+      <div class="event-content">
+        <div class="event-title">The Comedy Singularity</div>
+        <div class="event-description">As we approach the Technology Singularity, My fantastic AI co-host and I explore whether AI can be funny or not. This show will make you question what exactly it means to be a human or indeed to be an AI.</div>
+      </div>
+    </div>
+    </div>
+
+    <h2>STEM Communcation and Outreach</h2>
   <p class="text-left">
     I've carved out a unique niche in the world of STEM communication. Through my previous work at the University of Kent and the <a
           class="inline_link"
@@ -399,11 +416,27 @@
       <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Can%20AI%20Stand-Up%20UKC.png" alt="Image 8" onclick="changeImage(this)">
       <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Can%20AI%20Stand-Up%20-%20Pint%20of%20Science%20Festival_1.png" alt="Image 9" onclick="changeImage(this)">
       <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Wide%20Shot%20-%20Can%20AI%20Stand-Up%20-%20Pint%20of%20Science%20Festival.png" alt="Image 10" onclick="changeImage(this)">
-      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_2.jpg" alt="Image 10" onclick="changeImage(this)">
-      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_3.jpg" alt="Image 10" onclick="changeImage(this)">
-      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_4.jpg" alt="Image 10" onclick="changeImage(this)">
-      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_5.jpg" alt="Image 10" onclick="changeImage(this)">
-      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_6.jpg" alt="Image 10" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_2.jpg" alt="Image 11" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_3.jpg" alt="Image 12" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_4.jpg" alt="Image 13" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_5.jpg" alt="Image 14" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Events%20Gallery%20Images/Pint%20of%20Science%20Festival_6.jpg" alt="Image 15" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/Stand-Up%20on%20the%20Stour%20-%20Monopoly%20copy/2023-09-28 12.02.52.jpg" alt="Image 16" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/CodeHarbour%20-%20Photos%20copy/CodeHarbour - AI Presentations Talk - 22nd Feb 2024.00_03_41_02.Still001.png" alt="Image 17" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/CodeHarbour%20-%20Photos%20copy/CodeHarbour - AI Presentations Talk - 22nd Feb 2024.00_04_01_12.Still002.png" alt="Image 18" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/CodeHarbour%20-%20Photos%20copy/CodeHarbour - AI Presentations Talk - 22nd Feb 2024.00_13_44_24.Still003.png" alt="Image 19" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/CodeHarbour%20-%20Photos%20copy/CodeHarbour - AI Presentations Talk - 22nd Feb 2024.00_21_59_14.Still004.png" alt="Image 20" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/CC%20Talk%20copy/Picture.png" alt="Image 21" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/Claude AI and Widgets    BarCamp 2024.00_01_14_01.Still001.png" alt="Image 22" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/Claude AI and Widgets    BarCamp 2024.00_05_56_24.Still002.png" alt="Image 23" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/Claude AI and Widgets    BarCamp 2024.00_20_47_07.Still003.png" alt="Image 27" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/Claude AI and Widgets    BarCamp 2024.00_25_18_13.Still004.png" alt="Image 28" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/Can AI Stand Up Thesis Presentation    BarCamp 2024.00_07_23_09.Still001.png" alt="Image 24" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/Can AI Stand Up Thesis Presentation    BarCamp 2024.00_14_46_18.Still002.png" alt="Image 25" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/Can AI Stand Up Thesis Presentation    BarCamp 2024.00_24_42_19.Still003.png" alt="Image 26" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/PowerPoint Karaoke   BarCamp 2024.00_01_28_07.Still001.png" alt="Image 29" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/PowerPoint Karaoke   BarCamp 2024.00_05_28_21.Still002.png" alt="Image 30" onclick="changeImage(this)">
+      <img class="thumbnail" src="/Slideshow%20Images/Upload%20June%202025/BarCamp%202024%20-%20Highlights%20copy/PowerPoint Karaoke   BarCamp 2024.00_09_29_05.Still003.png" alt="Image 31" onclick="changeImage(this)">
     </div>
   </div>
 </div>
