Small tweak to meta description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="../favicon.ico" />
   <meta
           name="description"
-          content="Tommy Hills is a passionate STEM communicator, based in Milton Keynes, with their blend of Mathematics, Computer Science, and Education seamlessly intertwining with the world of performing and creative arts."
+          content="Tommy Hills is a passionate STEM communicator, based in Milton Keynes, with their blend of Mathematics, Computer Science, and Education seamlessly intertwining with the world of performing and creative arts. They are also a comedian and performer, most recently taking their human + AI comedy show (The Comedy Singularity) to Watford Fringe."
   />
 
     <link rel="stylesheet" href="blog_styles.css" type="text/css">
