--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to The Tommyverse</title>
-  <link rel="icon" href="../favicon.ico" />
-  <meta
-          name="description"
-          content="Tommy Hills is a passionate STEM communicator, based in Milton Keynes, with their blend of Mathematics, Computer Science, and Education seamlessly intertwining with the world of performing and creative arts. They are also a comedian and performer, most recently taking their human + AI comedy show (The Comedy Singularity) to Watford Fringe."
-  />
 
-    <link rel="stylesheet" href="blog_styles.css" type="text/css">
-  <link rel="stylesheet" href="gallery_grid.css " type="text/css">
+  <title>Welcome to The Tommyverse | Tommy Hills - STEM Communicator & Comedian</title>
+
+  <meta name="description" content="Tommy Hills is a passionate STEM communicator and performer based in Milton Keynes, blending Mathematics, Computer Science, Education, and the performing arts. Creator of the human + AI comedy show 'The Comedy Singularity'.">
+  <meta name="keywords" content="Tommy Hills, STEM communicator, comedian, AI comedy, The Comedy Singularity, Watford Fringe, Milton Keynes, mathematics, computer science, creative arts, science communication, education, tech comedy">
+  <meta name="author" content="Tommy Hills">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://thetommyverse.com/">
+  <meta property="og:title" content="Welcome to The Tommyverse | Tommy Hills">
+  <meta property="og:description" content="Explore the world of Tommy Hills: STEM communicator, comedian, and creator of the hit AI comedy show 'The Comedy Singularity'.">
+  <!-- TODO <meta property="og:image" content="https://thetommyverse.com/images/og-image.jpg"> -->
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://thetommyverse.com/">
+  <meta name="twitter:title" content="Welcome to The Tommyverse | Tommy Hills">
+  <meta name="twitter:description" content="Explore the world of Tommy Hills: STEM communicator, comedian, and creator of the hit AI comedy show 'The Comedy Singularity'.">
+  <!--TODO <meta name="twitter:image" content="https://thetommyverse.com/images/og-image.jpg">  -->
+
+  <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="blog_styles.css" type="text/css">
+  <link rel="stylesheet" href="gallery_grid.css" type="text/css">
   <link rel="stylesheet" href="website_styles.css" type="text/css">
   <link rel="stylesheet" href="events_styles.css" type="text/css">
-    <script src="scripts.js"></script>
 
-  <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
-  <script
-          src="https://kit.fontawesome.com/173f107a50.js"
-          crossorigin="anonymous"
-  ></script>
+  <!-- Scripts -->
+  <script src="scripts.js" defer></script>
+
+  <!-- Font Awesome (choose ONE method; using kit is better for performance & flexibility) -->
+  <script src="https://kit.fontawesome.com/173f107a50.js" crossorigin="anonymous" defer></script>
+
 
   <style>
 
