Changed Events Images

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
   <div class="events-grid">
 
     <div class="event-card">
-      <img class="event-image" src="/Events%20Images/Ridiculous%20Quirks%20Carousel%20Video.gif" alt="Event 2" />
+      <img class="event-image" src="/Slideshow Images/Events Gallery Images/Ridiculous Quirks 0.png" alt="Event 2" />
       <div class="event-content">
         <div class="event-title">The Ridiculous Quirks of a Mathematically Imagined World</div>
         <div class="event-description">What is Mathematics? A boring school subject. A random selection of number laws... No!
@@ -404,7 +404,7 @@
     </div>
 
     <div class="event-card">
-      <img class="event-image" src="/Events%20Images/Can%20AI%20Stand-Up%20Graphic.png" alt="Event 2" />
+      <img class="event-image" src="/Slideshow Images/Events Gallery Images/Pint of Science Festival_2.jpg" alt="Event 2" />
       <div class="event-content">
         <div class="event-title">Can AI Stand-Up?</div>
         <div class="event-description">AI-generated content is taking over the creative world. But can large-language models replace stand-up comedians.
@@ -414,7 +414,7 @@
     </div>
 
     <div class="event-card">
-      <img class="event-image" src="/Events%20Images/2035.png" alt="Event 2" />
+      <img class="event-image" src="/Slideshow Images/Upload June 2025/CC Talk copy/Picture.png" alt="Event 2" />
       <div class="event-content">
         <div class="event-title">2035 and the Future of AI</div>
         <div class="event-description">Everyone says that AI is going to destroy our future, but is that truly the case.
@@ -424,7 +424,7 @@
     </div>
 
     <div class="event-card">
-      <img class="event-image" src="/Events%20Images/presentations.png" alt="Event 1" />
+      <img class="event-image" src="/Slideshow Images/Upload June 2025/CodeHarbour - Photos copy/CodeHarbour - AI Presentations Talk - 22nd Feb 2024.00_04_01_12.Still002.png" alt="Event 1" />
       <div class="event-content">
         <div class="event-title">Let's Change How We Make Presentations</div>
         <div class="event-description">Making PowerPoint Presentations manually is so 2020. Let's explore how we can use AI to make our presentations for us.
