--- a/index.html
+++ b/index.html
@@ -433,6 +433,17 @@
       </div>
     </div>
 
+    <div class="event-card">
+      <img class="event-image" src="/Events Images/CCTALK - 1.jpg" alt="Event 1" />
+      <div class="event-content">
+        <div class="event-title">Stand-Up and Deliver</div>
+        <div class="event-description">An in-depth look into stand-up comedy theory, measuring humour and creativity in computational systems and how to use iterative prompt-chaining to develop stand-up comedy material.
+
+          <br><br> Let Tommy guide you through an overview of his MSc-R thesis and the process of generating stand-up comedy material with AI.</div>
+        </div>
+      </div>
+    </div>
+
 
   </div>
 
